add file manager
